@@ -1,3 +1,9 @@
+2008-05-02  Werner Koch  <wk@g10code.com>
+
+	* mimeparser.c (t2body): Detect non-inline text parts.
+	* rfc822parse.c (rfc822parse_query_parameter): Add special mode
+	for an ATTR of NULL.
+
 2008-04-16  Werner Koch  <wk@g10code.com>
 
 	* message-events.h (class GpgolMessageEvents): Add M_GOTINSPECTOR.
